--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -4,7 +4,7 @@
   "main_title": "Muita calma nesta hora",
   "main_subtitle": "Converse e desabafe nestes tempos de COVID-19",
   "main_button_text": "Conversar com voluntário",
-  "main_col1_header": "voluntários de excelência",
+  "main_col1_header": "Voluntários de excelência",
   "main_col1_text": "Converse com estudantes de doutorado, mestrado e graduação das melhores instituições de ensino do Brasil e Argentina.",
   "main_col_text_h": "Conheça nossa equipe",
   "main_col2_header": "Supervisores de Excelência",
@@ -13,6 +13,7 @@
   "main_col3_text": "Neste momento difícil do COVID-19, nos juntamos para ajudar você.",
   "navbar_principal": "Principal",
   "navbar_equipe": "Equipe",
+  "navbar_onde_buscar_ajuda": "Onde Buscar Ajuda",
   "navbar_conversar": "Conversar",
   "footer_calma": "Calma",
   "footer_realizacao": "Realização",
@@ -21,5 +22,9 @@
   "team_page_title_seo": "Calma | Conheça a equipe e o projeto",
   "team_page_description_seo": "Conheça a equipe de especialistas e voluntários que mantém este projeto",
   "team_page_header": "Equipe",
-  "team_page_description": "Conheça a equipe de supervisores e voluntários do projeto."
+  "team_page_description": "Conheça a equipe de supervisores e voluntários do projeto.",
+  "services_page_title_seo": "Calma | Conheça a equipe e o projeto",
+  "services_page_description_seo": "Conheça a equipe de especialistas e voluntários que mantém este projeto",
+  "services_page_header": "Equipe",
+  "services_page_description": "Conheça a equipe de supervisores e voluntários do projeto."
 }
