finish where to find help page

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -25,6 +25,6 @@
   "team_page_description": "Conheça a equipe de supervisores e voluntários do projeto.",
   "services_page_title_seo": "Calma | Conheça a equipe e o projeto",
   "services_page_description_seo": "Conheça a equipe de especialistas e voluntários que mantém este projeto",
-  "services_page_header": "Equipe",
-  "services_page_description": "Conheça a equipe de supervisores e voluntários do projeto."
+  "services_page_header": "Onde busco ajuda?",
+  "services_page_description": "Use nossa lista para buscar ajuda em serviços de referência de saúde e segurança social."
 }
