--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -23,8 +23,8 @@
   "team_page_description_seo": "Conheça a equipe de especialistas e voluntários que mantém este projeto",
   "team_page_header": "Equipe",
   "team_page_description": "Conheça a equipe de supervisores e voluntários do projeto.",
-  "services_page_title_seo": "Calma | Conheça a equipe e o projeto",
-  "services_page_description_seo": "Conheça a equipe de especialistas e voluntários que mantém este projeto",
+  "services_page_title_seo": "Onde busco ajuda",
+  "services_page_description_seo": "Use nossa lista para buscar ajuda em serviços de referência de saúde e segurança social",
   "services_page_header": "Onde busco ajuda?",
   "services_page_description": "Use nossa lista para buscar ajuda em serviços de referência de saúde e segurança social."
 }
