--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,18 +1,19 @@
 {
   "main_title_seo": "Calma - Disminuya su ansiedad durante COVID-19",
   "main_description_seo": "Converse y aligere su ansiedad en estos tiempos de COVID-19,  con un voluntario entrenado",
-  "main_title": "Calma para este momento",
+  "main_title": "Calma en este momento",
   "main_subtitle": "Hable y alíviese en este momento de COVID-19",
   "main_button_text": "Hable con un voluntario",
   "main_col1_header": "Voluntarios de excelencia",
-  "main_col1_text": "Converse con estudiantes de doctorado, maestría y de carreras de grado, de las mejores instituciones académicas de Brasil y Argentina.",
+  "main_col1_text": "Converse con estudiantes de doctorado, maestría y de carreras de grado, de excelentes instituciones académicas de Brasil y Argentina.",
   "main_col_text_h": "Conozca nuestro equipo",
   "main_col2_header": "Supervisores de Excelencia",
   "main_col2_text": "Equipo de supervisores que poseen experiencia en diversas áreas relacionadas a la Salud Mental y Física.",
   "main_col3_header": "Soporte Gratuito y de Calidad",
-  "main_col3_text": "En difícil situación del COVID-19, nos juntamos para ayudarte",
+  "main_col3_text": "En esta difícil situación del COVID-19, nos juntamos para ayudarte",
   "navbar_principal": "Principal",
   "navbar_equipe": "Equipo",
+  "navbar_onde_buscar_ajuda": "Donde buscar ayuda",
   "navbar_conversar": "Conversar",
   "footer_calma": "Calma",
   "footer_realizacao": "Realización",
@@ -21,5 +22,9 @@
   "team_page_title_seo": "Calma / Conoce al equipo y al proyecto",
   "team_page_description_seo": "Conoce al equipo de especialistas y voluntarios que forman parte de este proyecto",
   "team_page_header": "Equipe",
-  "team_page_description": "Conoce al equipo de supervisores y voluntarios del proyecto"
+  "team_page_description": "Conoce al equipo de supervisores y voluntarios del proyecto",
+  "services_page_title_seo": "Donde busco ayuda",
+  "services_page_description_seo": "Utilice nuestra lista para buscar ayuda en servicios de salud y seguridad social",
+  "services_page_header": "Donde busco ayuda?",
+  "services_page_description": "Utilice nuestra lista para buscar ayuda en servicios de salud y seguridad social"
 }
