--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,8 +1,8 @@
 {
   "main_title_seo": "Calma - Diminua sua ansiedade durante o COVID-19", 
-  "main_description_seo": "Converse e desabafe com um voluntário treinado para diminiur a sua ansiedade nestes tempos de COVID-19", 
+  "main_description_seo": "Acolhimento em saúde gratuito para diminiur a sua ansiedade nestes tempos de COVID-19", 
   "main_title": "Muita calma nesta hora",
-  "main_subtitle": "Converse e desabafe nestes tempos de COVID-19",
+  "main_subtitle": "Acolhimento em saúde gratuito nestes tempos de COVID-19",
   "main_button_text": "Conversar com voluntário",
   "main_col1_header": "Voluntários de excelência",
   "main_col1_text": "Converse com estudantes de doutorado, mestrado e graduação das melhores instituições de ensino do Brasil e Argentina.",
@@ -13,12 +13,13 @@
   "main_col3_text": "Neste momento difícil do COVID-19, nos juntamos para ajudar você.",
   "navbar_principal": "Principal",
   "navbar_equipe": "Equipe",
+  "navbar_about": "Sobre",
   "navbar_onde_buscar_ajuda": "Onde Buscar Ajuda",
   "navbar_conversar": "Conversar",
   "navbar_libraries": "Materiais para leitura",
   "footer_calma": "Calma",
   "footer_realizacao": "Realização",
-  "footer_description": "Calma. 2020. Alguns direitos reservados.",
+  "footer_description": "Calma. 2020. Direitos reservados",
   "footer_project_github": "Este projeto é colaborativo, de código aberto. O código-fonte está disponível no ",
   "team_page_title_seo": "Calma | Conheça a equipe e o projeto",
   "team_page_description_seo": "Conheça a equipe de especialistas e voluntários que mantém este projeto",
@@ -31,5 +32,19 @@
   "libraries_page_title_seo": "Material de referência",
   "libraries_page_description_seo": "Conheça o material que fundamenta nosso atendimento e saiba mais sobre saúde física, mental e sua relação com COVID-19",
   "libraries_page_header": "Material de referência",
-  "libraries_page_description": "Conheça o material que fundamenta nosso atendimento e saiba mais sobre saúde física, mental e sua relação com COVID-19"
+  "libraries_page_description": "Conheça o material que fundamenta nosso atendimento e saiba mais sobre saúde física, mental e sua relação com COVID-19",
+  "faq_page_title_seo": "Dúvidas mais frequentes",
+  "faq_page_description_seo": "Vejas as dúvidas mais comuns de nossos usuários.",
+  "faq_page_title": "Dúvidas mais frequentes",
+  "faq_page_p": "Vejas as dúvidas mais comuns de nossos usuários.",
+  "faq_page_q1_h": "1. 'Calma nessa hora' oferece terapia psicológica?",
+  "faq_page_q1_p": "Não. Nós apenas oferecemos acolhimento em saúde, que pode envolver questões ligadas à saúde mental. No entanto, não substituímos qualquer forma de terapia.",
+  "faq_page_q2_h": "2. Tenho algum problema de saúde mental, posso usar o 'Calma nessa Hora'?",
+  "faq_page_q2_p": "Sim, você poderá usar e sempre será bem vindo. Lembre-se, nosso serviço não substitui o trabalho de profissionais de saúde.Inclusive, iremos sugerir que você procure ajuda profissional em nossos chats.",
+  "faq_page_q3_h": "3. É de graça ou gratuito?",
+  "faq_page_q3_p": "Sim, é totalmente gratuito. É um trabalho voluntário.",
+  "faq_page_q4_h": "4. Como posso ajudar? ",
+  "faq_page_q4_p1": "Divulgação: Por favor, compartilhe nosso projeto com seus familiares, colegas de trabalho e de faculdade.",
+  "faq_page_q4_p2": "Doações: Doações são sempre bem vindas, porque não temos dinheiro somente muita boa vontade de ajudar o próximo.",
+  "faq_page_q4_p3": "Ser voluntário: Precisamos de ajuda na parte de TI, de acolhimento, na divulgação. Entre em contato conosco via chat."
 }
